eshell - fix bug with git prompt string

--- a/emacs.org
+++ b/emacs.org
@@ -1051,7 +1051,8 @@ eshell-keys
 (defun eshell--git-prompt-string ()
   (require 'vc)
   (if (jw--git-root-dir)
-      (let* ((git-branch-name (car (vc-git-branches)))
+      ;; vc-git-branches returns (list nil) instead of nil when there is no branch name instead of just nil (i.e. after a git-init)
+      (let* ((git-branch-name (or (car (vc-git-branches)) "(in the beginning there was darkness)"))
              (git-is-clean (s-blank? (shell-command-to-string "git diff --shortstat 2> /dev/null | tail -n1")))
              (git-is-clean-marker (if git-is-clean "✔" "✘"))
              (git-is-clean-color (if git-is-clean "green" "red1"))
