--- a/emacs.org
+++ b/emacs.org
@@ -1324,7 +1324,7 @@ helm-keys
 (defalias 'projectile-empty-garbage 'projectile-cleanup-known-projects)
 
 (defun projectile-clear-known-projects--advice--ask-y-or-n (original-function)
-  (if (yes-or-no-p "This will REMOVE all projects from projectile. Are you sure?")
+  (if (yes-or-no-p "This will REMOVE ALL projects from projectile. Are you sure?")
       (apply original-function)
     (message "Did NOT clear the projectile projects.")))
 
