Adds back in a bunch of yasnippets

--- a/emacs.org
+++ b/emacs.org
@@ -92,6 +92,7 @@ Now, start emacs.
                  (global-flycheck-mode)))
 
 (use-package yasnippet)
+(use-package yasnippet-snippets)
 
 (use-package helm)
 (use-package helm-ag)
