delete-by-moving-to-trash

--- a/emacs.org
+++ b/emacs.org
@@ -565,6 +565,8 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 
 (setq backup-directory-alist `(("." . ,user-backup-directory)))
 
+(setq delete-by-moving-to-trash t)
+
 (when (eq system-type 'gnu/linux)
   (setq interprogram-paste-function 'x-cut-buffer-or-selection-value
         browse-url-browser-function 'browse-url-generic
@@ -573,7 +575,8 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (when (eq system-type 'darwin)
   (setq ns-command-modifier 'meta
         browse-url-browser-function 'browse-url-default-macosx-browser
-        ispell-program-name "aspell"))
+        ispell-program-name "aspell"
+        trash-directory "~/.Trash"))
 #+END_SRC
 
 ** functions
