new org-todo state for "deploying"

--- a/emacs.org
+++ b/emacs.org
@@ -1615,7 +1615,7 @@ org-keys
       org--blocked-todo-boxed-states '("blocked" "halted" "stalled" "paused")
       org--doing-todo-boxed-states '("doing" "going")
       org--doing-todo-states '("⚐")
-      org--delegated-todo-boxed-states '("delegated" "assigned" "pr" "waiting")
+      org--delegated-todo-boxed-states '("delegated" "assigned" "pr" "waiting" "deploying")
       org--done-todo-boxed-states '("done" "cancelled" "canceled" "finished" "boom" "read" "answered")
       org--done-todo-states '("✘" "✔"))
 
